force-app/main/default/objects/CWS_BillingItem__c/CWS_BillingItem__c.object-meta.xml
<CustomObject>
    <label>Billing Item</label>
    <nameField>
        <displayFormat>BI-{000000}</displayFormat>
        <label>Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>