force-app/main/default/objects/CWS_BillingItem__c/fields/CWS_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>CWS_Billing_Country__c</fullName>
    <inlineHelpText>The billing country associated with the billing item</inlineHelpText>
    <label>Billing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>