force-app/main/default/objects/CWS_BillingItem__c/fields/CWS_BillingPeriod__c.field-meta.xml
<CustomField>
    <fullName>CWS_BillingPeriod__c</fullName>
    <inlineHelpText>Master-detail, relates the billing item to its billing period</inlineHelpText>
    <label>Billing Period</label>
    <referenceTo>CWS_BillingPeriod__c</referenceTo>
    <relationshipLabel>Billing Items</relationshipLabel>
    <relationshipName>Billing_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>