force-app/main/default/objects/CWS_BillingItem__c/fields/CWS_BilltoAccountName__c.field-meta.xml
<CustomField>
    <fullName>CWS_BilltoAccountName__c</fullName>
    <inlineHelpText>References the bill to account associated with the billing item</inlineHelpText>
    <label>Bill to Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>