force-app/main/default/objects/CWS_BillingItem__c/fields/CWS_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Case_Safe_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Case Safe ID</label>
    <type>Text</type>
</CustomField>