force-app/main/default/objects/CWS_BillingItem__c/fields/CWS_Description__c.field-meta.xml
<CustomField>
    <fullName>CWS_Description__c</fullName>
    <inlineHelpText>The description of the product associated with the billing item</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>