force-app/main/default/objects/CWS_BillingItem__c/fields/CWS_EndUserName__c.field-meta.xml
<CustomField>
    <fullName>CWS_EndUserName__c</fullName>
    <inlineHelpText>End user account name</inlineHelpText>
    <label>End User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>