force-app/main/default/objects/CWS_BillingItem__c/fields/CWS_Formula__c.field-meta.xml
<CustomField>
    <fullName>CWS_Formula__c</fullName>
    <formula>TEXT(CWS_Product__r.CWS_Source__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula</label>
    <type>Text</type>
</CustomField>