force-app/main/default/objects/CWS_BillingItem__c/fields/CWS_IncludeinMinCommit__c.field-meta.xml
<CustomField>
    <fullName>CWS_IncludeinMinCommit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Determines whether or not the billing item is included in min commit</inlineHelpText>
    <label>Include in Min Commit</label>
    <type>Checkbox</type>
</CustomField>