force-app/main/default/objects/CWS_BillingItem__c/fields/CWS_MRR__c.field-meta.xml
<CustomField>
    <fullName>CWS_MRR__c</fullName>
    <inlineHelpText>The MRR of the billing item</inlineHelpText>
    <label>MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>