force-app/main/default/objects/CWS_BillingItem__c/fields/CWS_PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>CWS_PaymentTerms__c</fullName>
    <inlineHelpText>The payment terms of the billing item</inlineHelpText>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Due Upon Receipt</fullName>
            </value>
            <value>
                <fullName>Net 5</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 40</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Net 75</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>