force-app/main/default/objects/CWS_BillingItem__c/fields/CWS_Product__c.field-meta.xml
<CustomField>
    <fullName>CWS_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the product associated with the billing item</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Billing Items</relationshipLabel>
    <relationshipName>Billing_Items</relationshipName>
    <type>Lookup</type>
</CustomField>