force-app/main/default/objects/CWS_BillingItem__c/fields/CWS_ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>CWS_ProductFamily__c</fullName>
    <inlineHelpText>The product family of the product associated to the billing item</inlineHelpText>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automate</fullName>
            </value>
            <value>
                <fullName>Fortify</fullName>
            </value>
            <value>
                <fullName>Command</fullName>
            </value>
            <value>
                <fullName>Sell</fullName>
            </value>
            <value>
                <fullName>Manage</fullName>
            </value>
            <value>
                <fullName>Solution Partners (3rd Party Products)</fullName>
            </value>
            <value>
                <fullName>Recover</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Help Desk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>