force-app/main/default/objects/CWS_BillingItem__c/fields/CWS_Region__c.field-meta.xml
<CustomField>
    <fullName>CWS_Region__c</fullName>
    <inlineHelpText>The region of the billing item</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMEA/ROW</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>