force-app/main/default/objects/CWS_BillingItem__c/fields/CWS_SKU__c.field-meta.xml
<CustomField>
    <fullName>CWS_SKU__c</fullName>
    <inlineHelpText>The SKU of the product associated with the billing item</inlineHelpText>
    <label>SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>