force-app/main/default/objects/CWS_BillingItem__c/fields/CWS_Source__c.field-meta.xml
<CustomField>
    <fullName>CWS_Source__c</fullName>
    <inlineHelpText>The source of the billing item</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CMS</fullName>
            </value>
            <value>
                <fullName>CW</fullName>
            </value>
            <value>
                <fullName>R1soft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>