force-app/main/default/objects/CWS_BillingItem__c/fields/CWS_WhiteSpaceGroup__c.field-meta.xml
<CustomField>
    <fullName>CWS_WhiteSpaceGroup__c</fullName>
    <inlineHelpText>The whitespace group of the product associated to the billing item</inlineHelpText>
    <label>Whitespace Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auvik (Cmd for Network Package)</fullName>
            </value>
            <value>
                <fullName>Command Desktop</fullName>
            </value>
            <value>
                <fullName>Command Other</fullName>
            </value>
            <value>
                <fullName>Command Server</fullName>
            </value>
            <value>
                <fullName>Fortify Discount</fullName>
            </value>
            <value>
                <fullName>Fortify for Assessment</fullName>
            </value>
            <value>
                <fullName>Fortify for Endpoint/Foundations</fullName>
            </value>
            <value>
                <fullName>Fortify for Network Assessment</fullName>
            </value>
            <value>
                <fullName>Fortify for Network Security</fullName>
            </value>
            <value>
                <fullName>Fortify for Protection</fullName>
            </value>
            <value>
                <fullName>Fortify Other</fullName>
            </value>
            <value>
                <fullName>Help Desk</fullName>
            </value>
            <value>
                <fullName>LMI Rescue</fullName>
            </value>
            <value>
                <fullName>MDM</fullName>
            </value>
            <value>
                <fullName>Min Commit Charge</fullName>
            </value>
            <value>
                <fullName>R1Soft</fullName>
            </value>
            <value>
                <fullName>Recover Discount</fullName>
            </value>
            <value>
                <fullName>Recover for Continuity/Backup</fullName>
            </value>
            <value>
                <fullName>Recover for SaaS</fullName>
            </value>
            <value>
                <fullName>Webroot</fullName>
            </value>
            <value>
                <fullName>Automate</fullName>
            </value>
            <value>
                <fullName>Sell</fullName>
            </value>
            <value>
                <fullName>IT Nation</fullName>
            </value>
            <value>
                <fullName>IT Nation Evolve</fullName>
            </value>
            <value>
                <fullName>Manage</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Solution Partners (3rd Party Products)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unclassified</fullName>
            </value>
            <value>
                <fullName>RMM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>