force-app/main/default/objects/CWS_BillingItem__c/listViews/All_Items.listView-meta.xml
<ListView>
    <fullName>All_Items</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Items</label>
</ListView>