force-app/main/default/objects/CWS_BillingItem__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>CWS_Product__c</columns>
    <columns>CWS_MRR__c</columns>
    <columns>CWS_BilltoAccountName__c</columns>
    <columns>CWS_EndUserName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
</ListView>